--- a/css/style.css
+++ b/css/style.css
@@ -350,8 +350,17 @@ header{
 
 
 .bgvideo{
-    position: absolute;
-    width: 100%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
     height: auto;
-    z-index: -9999;
+    z-index: -100;
+    transform: translateX(-50%) translateY(-50%);
+    background: url(https://7oom.ru/img/poster/08.jpg) no-repeat;
+    background-size: cover;
+    transition: 1s opacity;
 }
+    
