--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Version 1.0 18.11.2020 Create by Ulad Sasnouski */
+
 body {
   font-size: 20px;
   font-family: 'Orbitron', sans-serif;
@@ -79,13 +81,12 @@ button {
 }
 .howToWork {
   max-width: 600px;
-  padding-left: 20px;
-  position: absolute;
-  top: 150px;
+  font-size: 18px;
+  padding: 0px 20px 0px 20px;
 }
 
 .about_btn {
-  font-size: 35px;
+  font-size: 25px;
   padding: 10px;
   font-family: 'Orbitron', sans-serif;
 }
@@ -144,5 +145,13 @@ li {
   }
   .btn-long {
     width: 132px;
+  }
+}
+@media (max-width: 850px) {
+  .main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 40px;
   }
 }
